# graph_run

./: .gitignore  Cargo.toml  DEVELOP.md  README.md  build.sh  test.sh
demos/parallel_hello_datetime/: README.md
demos/parallel_hello_datetime/bash/: 00_servers.toml  10_shells.toml  20_commands.toml  30_tasks.toml  40_workflow.toml  run_demo.sh
demos/parallel_hello_datetime/powershell/: 00_servers.toml  10_shells.toml  20_commands.toml  30_tasks.toml  40_workflow.toml  run_demo.ps
scripts/: docker-ssh-test-down.sh  docker-ssh-test-up.sh
src/: config.rs  config_merge.rs  constants.rs  env_merge.rs  error.rs  execute.rs  lib.rs  logging.rs  main.rs  transfer.rs  workflow.rs  workflow_viz.rs  workspace.rs
tests/: workflow_run.rs
tests/data/: 00_servers.toml  01_shells.toml  02_commands.toml  03_tasks.toml  04_workflow.toml  04_workflow_abort.toml  04_workflow_fork_join.toml  04_workflow_linear.toml  04_workflow_loop.toml  04_workflow_nested_loops.toml  _common.sh
tests/data/constants_subst/: 00_servers.toml  01_shells.toml  02_commands.toml  03_tasks.toml  04_workflow_linear.toml  constants.toml  run_case.sh
tests/data/constants_subst_bad/: 02_commands.toml  03_tasks.toml  04_workflow_linear.toml  constants.toml  run_case.sh
tests/data/task_retry/: 01_shells.toml  02_commands.toml  03_tasks.toml  04_workflow_retry_exhaust.toml  04_workflow_retry_success.toml  run_case.sh
tests/data/task_retry_transfer/: 00_servers.toml  01_shells.toml  02_commands.toml  03_tasks.toml  04_workflow.toml  run_case.sh
tests/data/test_file_transfer/: 00_constants.toml  (+9 more)
(+14 files in other folders)
