[package]
name = "graph_run"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for graph_run"
license = "MIT OR Apache-2.0"

[[bin]]
name = "graph_run"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wait-timeout = "0.2"
thiserror = "1"

[lib]
name = "graph_run"
path = "src/lib.rs"
